[tool.poetry]
name = "sleep"
version = "0.0.8"
description = "Sleep Pressure Modeling"
readme = "README.md"
license = "MIT"
authors = ["Adrien Specht <aspecht@stanford.edu>"]
packages = [{ include = "sleep", from = "src" }]
include = ["sleep/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=1.0"
torch = ">=1.10"
pyyaml = "^6.0.2"
matplotlib = "^3.10.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.4"
ruff = ">=0.2.2"
mypy = ">=1.8.0"
ipykernel = ">=6.29.5"

[tool.ruff]
lint.select = ["E", "F", "W", "Q", "I"]
lint.fixable = ["ALL"]
lint.unfixable = []
line-length = 100

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
